--- a/public/index.html
+++ b/public/index.html
@@ -1046,40 +1046,34 @@ License: For each use you must have a valid license purchased only from above li
 								<div class="accordion-item">
 									<h2 class="accordion-header" id="headingOne">
 									<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-										Lorem Ipsum
+										How long does it take to develop software with you?
 									</button>
 									</h2>
 									<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
 									<div class="accordion-body">
-										<ul class="ms-5">
-											<li>Lorem</li>
-											<li>Ipsum</li>
-										</ul>
+										<p>We must first understand your project requirements in order to estimate the time required to develop your application. To put it another way, it is possible to complete a project in a few weeks, but it is also possible to complete a project over a period of several years. We recommend that you contact a member of our business development team for a more detailed response. They will be able to provide you with the most accurate estimate.</p>
 									</div>
 									</div>
 								</div>
 								<div class="accordion-item">
 									<h2 class="accordion-header" id="headingTwo">
 									<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-										Lorem Ipsum
-									</button>
+										What will it cost me to develop a product with you?									</button>
 									</h2>
 									<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
 									<div class="accordion-body">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit vero alias neque repellendus unde recusandae possimus harum similique nulla? Temporibus laboriosam ea natus asperiores fugiat eum amet nostrum nam unde.
-									</div>
+										To calculate the cost of project development, we must first determine the scope of work. The type of work and labour involved are then estimated. We go over the hourly rates of the new hires and then send you a spreadsheet.									</div>
 									</div>
 								</div>
 								<div class="accordion-item">
 									<h2 class="accordion-header" id="headingThree">
 									<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-										Lorem Ipsum
+										Do I need to be tech-savvy to work with you?
 									</button>
 									</h2>
 									<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
 									<div class="accordion-body">
-										Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi explicabo quasi quia. Quis, totam rem! Ab, perspiciatis laboriosam quo maiores amet provident quod exercitationem obcaecati sunt odio accusamus, pariatur distinctio.
-									</div>
+										It makes no difference how much technical knowledge you have. We will explain anything that is unclear or ambiguous to you.									</div>
 									</div>
 								</div>
 							</div>
