changes in our services logos

--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Story-->
 							<div class="text-center mb-10 mb-md-0">
 								<!--begin::Illustration-->
-								<img src="assets/media/illustrations/development-4536630_640.png" class="mh-125px mb-9" style="border-radius: 49%;" alt="" />
+								<img src="assets/media/illustrations/newlogos/4 (1).png" class="mh-125px mb-9"  alt="" />
 								<!--end::Illustration-->
 								<!--begin::Heading-->
 								<div class="d-flex flex-center mb-5">
@@ -246,7 +246,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Story-->
 							<div class="text-center mb-10 mb-md-0">
 								<!--begin::Illustration-->
-								<img src="assets/media/illustrations/robot-icon-6047951_640.jpg" class="mh-125px mb-9" style="border-radius: 49%;" alt="" />
+								<img src="assets/media/illustrations/newlogos/7.png" class="mh-125px mb-9"  alt="" />
 								<!--end::Illustration-->
 								<!--begin::Heading-->
 								<div class="d-flex flex-center mb-5">
@@ -272,7 +272,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Story-->
 							<div class="text-center mb-10 mb-md-0">
 								<!--begin::Illustration-->
-								<img src="assets/media/illustrations/seo-758264_640.jpg" class="mh-125px mb-9"style="border-radius: 49%;" alt="" />
+								<img src="assets/media/illustrations/newlogos/1.png" class="mh-125px mb-9" alt="" />
 								<!--end::Illustration-->
 								<!--begin::Heading-->
 								<div class="d-flex flex-center mb-5">
@@ -297,7 +297,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Story-->
 							<div class="text-center mb-10 mb-md-0">
 								<!--begin::Illustration-->
-								<img src="assets/media/illustrations/waves-1817646_640.png" class="mh-125px mb-9 graphic_img" style="border-radius: 70%;" alt="" />
+								<img src="assets/media/illustrations/newlogos/2.png" class="mh-125px mb-9 graphic_img"  alt="" />
 								<!--end::Illustration-->
 								<!--begin::Heading-->
 								<div class="d-flex flex-center mb-5">
@@ -322,7 +322,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Story-->
 							<div class="text-center mb-10 mb-md-0">
 								<!--begin::Illustration-->
-								<img src="assets/media/illustrations/creativity-819371_640.jpg" class="mh-125px mb-9" style="border-radius: 49%;"alt="" />
+								<img src="assets/media/illustrations/newlogos/9.png" class="mh-125px mb-9"alt="" />
 								<!--end::Illustration-->
 								<!--begin::Heading-->
 								<div class="d-flex flex-center mb-5">
@@ -347,7 +347,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Story-->
 							<div class="text-center mb-10 mb-md-0">
 								<!--begin::Illustration-->
-								<img src="assets/media/illustrations/digital-marketing-1433427_640.jpg" class="mh-125px mb-9" style="border-radius: 49%;" alt="" />
+								<img src="assets/media/illustrations/newlogos/6.png" class="mh-125px mb-9"  alt="" />
 								<!--end::Illustration-->
 								<!--begin::Heading-->
 								<div class="d-flex flex-center mb-5">
