--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@ License: For each use you must have a valid license purchased only from above li
 		<!-- <meta name="keywords" content="Metronic, bootstrap, bootstrap 5, Angular 11, VueJs, React, Laravel, admin themes, web design, figma, web development, ree admin themes, bootstrap admin, bootstrap dashboard" /> -->
 		<!-- <link rel="canonical" href="Https://preview.keenthemes.com/metronic8" /> -->
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+		<link rel="shortcut icon" href="assets/media/logos/mkg.png" />
 
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
@@ -228,9 +228,9 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 								<!--end::Heading-->
 								<!--begin::Description-->
-								<div class="fw-bold fs-6 fs-lg-4 text-muted">Save thousands to millions of bucks
-								<br />by using single tool for different
-								<br />amazing and great</div>
+								<div class="fw-bold fs-6 fs-lg-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+								<br /> sed do eiusmod tempor incididunt 
+								<br />ut labore et dolore</div>
 								<!--end::Description-->
 							</div>
 							<!--end::Story-->
@@ -254,9 +254,9 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 								<!--end::Heading-->
 								<!--begin::Description-->
-								<div class="fw-bold fs-6 fs-lg-4 text-muted">Save thousands to millions of bucks
-								<br />by using single tool for different
-								<br />amazing and great</div>
+								<div class="fw-bold fs-6 fs-lg-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+								<br /> sed do eiusmod tempor incididunt 
+								<br />ut labore et dolore</div>
 								<!--end::Description-->
 							</div>
 							<!--end::Story-->
@@ -280,9 +280,9 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 								<!--end::Heading-->
 								<!--begin::Description-->
-								<div class="fw-bold fs-6 fs-lg-4 text-muted">Save thousands to millions of bucks
-								<br />by using single tool for different
-								<br />amazing and great</div>
+								<div class="fw-bold fs-6 fs-lg-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+								<br /> sed do eiusmod tempor incididunt 
+								<br />ut labore et dolore</div>
 								<!--end::Description-->
 							</div>
 							<!--end::Story-->
@@ -305,9 +305,9 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 								<!--end::Heading-->
 								<!--begin::Description-->
-								<div class="fw-bold fs-6 fs-lg-4 text-muted">Save thousands to millions of bucks
-								<br />by using single tool for different
-								<br />amazing and great</div>
+								<div class="fw-bold fs-6 fs-lg-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+								<br /> sed do eiusmod tempor incididunt 
+								<br />ut labore et dolore</div>
 								<!--end::Description-->
 							</div>
 							<!--end::Story-->
@@ -330,9 +330,9 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 								<!--end::Heading-->
 								<!--begin::Description-->
-								<div class="fw-bold fs-6 fs-lg-4 text-muted">Save thousands to millions of bucks
-								<br />by using single tool for different
-								<br />amazing and great</div>
+								<div class="fw-bold fs-6 fs-lg-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+								<br /> sed do eiusmod tempor incididunt 
+								<br />ut labore et dolore</div>
 								<!--end::Description-->
 							</div>
 							<!--end::Story-->
@@ -355,9 +355,9 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 								<!--end::Heading-->
 								<!--begin::Description-->
-								<div class="fw-bold fs-6 fs-lg-4 text-muted">Save thousands to millions of bucks
-								<br />by using single tool for different
-								<br />amazing and great</div>
+								<div class="fw-bold fs-6 fs-lg-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+								<br /> sed do eiusmod tempor incididunt 
+								<br />ut labore et dolore</div>
 								<!--end::Description-->
 							</div>
 							<!--end::Story-->
@@ -500,7 +500,7 @@ License: For each use you must have a valid license purchased only from above li
 						<!--end::Testimonial-->
 						<!--begin::Author-->
 						<div class="fs-2 fw-bold text-muted text-center">
-							<a href="account/security.html" class="link-primary fs-4 fw-bolder">Ruman ALi,</a>
+							<a href="https://www.linkedin.com/in/ruman-ali/" class="link-primary fs-4 fw-bolder">Ruman ALi,</a>
 							<span class="fs-4 fw-bolder text-gray-600">Founder</span>
 						</div>
 						<!--end::Author-->
@@ -540,7 +540,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Person-->
 								<div class="mb-0">
 									<!--begin::Name-->
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-3">Ruman Ali</a>
+									<a  class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Ruman Ali</a>
 									<!--end::Name-->
 									<!--begin::Position-->
 									<div class="text-muted fs-6 fw-bold mt-1">Founder and Lead Dev</div>
@@ -557,7 +557,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Person-->
 								<div class="mb-0">
 									<!--begin::Name-->
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-3">Muzammil Hassan</a>
+									<a  class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Muzammil Hassan</a>
 									<!--end::Name-->
 									<!--begin::Position-->
 									<div class="text-muted fs-6 fw-bold mt-1">Ceo and Flutter Dev</div>
@@ -574,7 +574,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Person-->
 								<div class="mb-0">
 									<!--begin::Name-->
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-3">Umer Mughal</a>
+									<a  class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Umer Mughal</a>
 									<!--end::Name-->
 									<!--begin::Position-->
 									<div class="text-muted fs-6 fw-bold mt-1">Flutter Expert</div>
@@ -591,7 +591,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Person-->
 								<div class="mb-0">
 									<!--begin::Name-->
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-3">Abubakar Shahid</a>
+									<a  class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Abubakar Shahid</a>
 									<!--end::Name-->
 									<!--begin::Position-->
 									<div class="text-muted fs-6 fw-bold mt-1">SEO Expert</div>
@@ -608,7 +608,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Person-->
 								<div class="mb-0">
 									<!--begin::Name-->
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-3">Yawar Tariq</a>
+									<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Yawar Tariq</a>
 									<!--end::Name-->
 									<!--begin::Position-->
 									<div class="text-muted fs-6 fw-bold mt-1">Web Developer</div>
@@ -625,7 +625,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Person-->
 								<div class="mb-0">
 									<!--begin::Name-->
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-3">Bilal Anwar</a>
+									<a class="text-dark fw-bolder text-hover-primary fs-3 removeCourser">Bilal Anwar</a>
 									<!--end::Name-->
 									<!--begin::Position-->
 									<div class="text-muted fs-6 fw-bold mt-1">Laravel Expert</div>
