--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@ License: For each use you must have a valid license purchased only from above li
 		<!-- <meta name="keywords" content="Metronic, bootstrap, bootstrap 5, Angular 11, VueJs, React, Laravel, admin themes, web design, figma, web development, ree admin themes, bootstrap admin, bootstrap dashboard" /> -->
 		<!-- <link rel="canonical" href="Https://preview.keenthemes.com/metronic8" /> -->
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-		<link rel="shortcut icon" href="assets/media/logos/mkg.png" />
+		<link rel="shortcut icon" href="assets/media/logos/favicon.ico.png" />
 
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
@@ -1197,12 +1197,12 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Copyright-->
 							<div class="d-flex align-items-center order-2 order-md-1">
 								<!--begin::Logo-->
-								<a href="landing.html">
+								<a href=" ">
 									<img alt="Logo" src="assets/media/logos/mkg.png" class="h-15px h-md-20px" />
 								</a>
 								<!--end::Logo image-->
 								<!--begin::Logo image-->
-								<span class="mx-5 fs-6 fw-bold text-gray-600 pt-1" href="https://www.mkgtechsols.com/">2021 MKG Tech.</span>
+								<span class="mx-5 fs-6 fw-bold text-gray-600 pt-1" href="https://www.mkgtechsols.com/">2022 MKG Tech.</span>
 								<!--end::Logo image-->
 							</div>
 							<!--end::Copyright-->
