--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,7 @@
 
 <!DOCTYPE html>
-<!--
-Product Name: Metronic - #1 Selling Bootstrap 5 HTML Multi-demo Admin Dashboard ThemeAuthor: KeenThemes
-Purchase: https://1.envato.market/EA4JPWebsite: http://www.keenthemes.com/
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-License: For each use you must have a valid license purchased only from above link in order to legally use the theme for your project.-->
+
+
 <html lang="en">
 	<!--begin::Head-->
 	<head><base href="">
@@ -500,7 +494,7 @@ License: For each use you must have a valid license purchased only from above li
 						<!--end::Testimonial-->
 						<!--begin::Author-->
 						<div class="fs-2 fw-bold text-muted text-center">
-							<a href="https://www.linkedin.com/in/ruman-ali/" class="link-primary fs-4 fw-bolder">Ruman ALi,</a>
+							<a href="https://www.linkedin.com/in/ruman-ali/" target="_blank" class="link-primary fs-4 fw-bolder">Ruman ALi,</a>
 							<span class="fs-4 fw-bolder text-gray-600">Founder</span>
 						</div>
 						<!--end::Author-->
@@ -1099,6 +1093,75 @@ License: For each use you must have a valid license purchased only from above li
 				<!--end::Container-->
 			</div>
 			<!--end::Testimonials Section-->
+
+
+
+
+<div id="top"></div>
+<section class="gallery">
+	<div class="row potfolio_sec" >
+		<ul>
+			<a href="#" class="close"></a>
+			
+			<li>
+				<a class="image" href="#item01">
+					<img src="assets/media/stock/600x600/unnamed.webp" alt="">
+				</a>
+			</li>
+			<li>
+				<a class="image" href="#item02">
+					<img src="assets/media/stock/600x600/Run.jpeg" alt="">
+				</a>
+			</li>
+			<li>
+				<a class="image" href="#item03">
+					<img src="assets/media/stock/600x600/unnamed.webp" alt="">
+				</a>
+			</li>
+			<li>
+				<a class="image" href="#item04">
+					<img src="assets/media/stock/600x600/unnamed.webp" alt="">
+				</a>
+			</li>
+			
+		</ul>
+	</div> <!-- / row -->
+
+	<!-- Item 01 -->
+	<div id="item01" class="port">
+	
+		<div class="row">
+			<div class="description">
+				<h1>Item 01</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
+			</div>
+
+				<img  src="assets/media/stock/600x600/asaan.webp" alt="">
+			</div>
+		</div> <!-- / row -->
+
+	 <!-- / Item 02 -->
+
+	<!-- Item 02 -->
+	<div id="item02" class="port">
+	
+		<div class="row">
+			<div class="description">
+				<h1>Item 02</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
+			</div>
+			<img src="assets/media/stock/600x400/frog2.jpeg" alt="">
+		</div> / row
+
+	</div> <!-- / Item 02 -->
+
+</section> <!-- / projects -->
+
+
+
+
+
+
 			<!--begin::Footer Section-->
 			<div class="mb-0">
 				<!--begin::Curve top-->
@@ -1123,7 +1186,7 @@ License: For each use you must have a valid license purchased only from above li
 									<!--end::Title-->
 									<!--begin::Text-->
 									<span class="fw-normal fs-4 text-gray-700">Email us to
-									<a href="#" class="text-white opacity-50 text-hover-primary">mkgtechsols@gmail.com</a></span>
+									<a href="mailto:mkgtechsols@gmail.com" class="text-white opacity-50 text-hover-primary">mkgtechsols@gmail.com</a></span>
 									<!--end::Text-->
 								</div>
 								<!--end::Block-->
@@ -1140,19 +1203,19 @@ License: For each use you must have a valid license purchased only from above li
 										<h4 class="fw-bolder text-gray-400 mb-6">Stay Connected</h4>
 										<!--end::Subtitle-->
 										<!--begin::Link-->
-										<a href="https://www.facebook.com/mkgtechsols/" class="mb-6">
+										<a href="https://www.facebook.com/mkgtechsols/" target="_blank" class="mb-6">
 											<img src="assets/media/svg/brand-logos/facebook-4.svg" class="h-20px me-2" alt="" />
 											<span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Facebook</span>
 										</a>
 										<!--end::Link-->
 										<!--begin::Link-->
-										<a href="https://github.com/Rumanali786" class="mb-6">
+										<a href="https://github.com/Rumanali786" target="_blank" class="mb-6">
 											<img src="assets/media/svg/brand-logos/github.svg" class="h-20px me-2" alt="" />
 											<span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Github</span>
 										</a>
 										<!--end::Link-->
 										<!--begin::Link-->
-										<a href="https://twitter.com/MkgTechsols" class="mb-6">
+										<a href="https://twitter.com/MkgTechsols" target="_blank" class="mb-6">
 											<img src="assets/media/svg/brand-logos/twitter.svg" class="h-20px me-2" alt="" />
 											<span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Twitter</span>
 										</a>
@@ -1166,13 +1229,13 @@ License: For each use you must have a valid license purchased only from above li
 										<!--end::Subtitle-->
 										
 										<!--begin::Link-->
-										<a href="https://www.linkedin.com/company/mkg-techsols" class="mb-6">
+										<a href="https://www.linkedin.com/company/mkg-techsols" target="_blank" class="mb-6">
 											<img src="assets/media/svg/brand-logos/linkdin.png" class="h-20px me-2" alt="" />
 											<span class="text-white opacity-50 text-hover-primary fs-5 mb-6">LinkDin</span>
 										</a>
 										<!--end::Link-->
 										<!--begin::Link-->
-										<a href="https://www.instagram.com/mkgtechsols/" class="mb-6">
+										<a href="https://www.instagram.com/mkgtechsols/" target="_blank" class="mb-6">
 											<img src="assets/media/svg/brand-logos/instagram-2-1.svg" class="h-20px me-2" alt="" />
 											<span class="text-white opacity-50 text-hover-primary fs-5 mb-6">Instagram</span>
 										</a>
@@ -1247,6 +1310,24 @@ License: For each use you must have a valid license purchased only from above li
 		<script src="assets/js/custom/landing.js"></script>
 		<script src="assets/js/custom/pages/company/pricing.js"></script>
 		<!--end::Page Custom Javascript-->
+		<script>
+			 $('.gallery ul li a').click(function() {
+     var itemID = $(this).attr('href');
+     $('.gallery ul').addClass('item_open');
+     $(itemID).addClass('item_open');
+     return false;
+ });
+ $('.close').click(function() {
+     $('.port, .gallery ul').removeClass('item_open');
+     return false;
+ });
+
+ $(".gallery ul li a").click(function() {
+     $('html, body').animate({
+         scrollTop: parseInt($("#top").offset().top)
+     }, 400);
+ });
+		</script>
 		<!--end::Javascript-->
 	</body>
 	<!--end::Body-->
