--- a/public/index.html
+++ b/public/index.html
@@ -762,16 +762,7 @@
 						<div class="">
 							<!--begin::Section-->
 							<div class="m-0">
-								<!--begin::Content-->
-								<div class="d-flex flex-stack">
-									<!--begin::Title-->
-									<h3 class="text-black">Latest Instagram Posts</h3>
-									<!--end::Title-->
-									<!--begin::Link-->
-									<a href="#" class="fs-6 fw-bold link-primary">View Instagram</a>
-									<!--end::Link-->
-								</div>
-								<!--end::Content-->
+							
 								<!--begin::Separator-->
 								<div class="separator separator-dashed border-gray-300 mb-9 mt-5"></div>
 								<!--end::Separator-->
@@ -783,10 +774,10 @@
 								<div class="col">
 									<!--begin::Overlay-->
 									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/media/demos/demo9.png">
+										href="assets/media/stock/600x600/asaan.webp">
 										<!--begin::Image-->
 										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
-											style="background-image:url('assets/media/demos/demo9.png')"></div>
+											style="background-image:url('assets/media/stock/600x600/unnamed.webp')"></div>
 										<!--end::Image-->
 										<!--begin::Action-->
 										<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
@@ -800,10 +791,10 @@
 								<div class="col">
 									<!--begin::Overlay-->
 									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/media/stock/900x600/32.jpg">
+										href="assets/media/stock/600x600/Aitbar2.jpeg">
 										<!--begin::Image-->
 										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
-											style="background-image:url('assets/media/stock/900x600/32.jpg')"></div>
+											style="background-image:url('assets/media/stock/600x600/Aitbar.jpeg')"></div>
 										<!--end::Image-->
 										<!--begin::Action-->
 										<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
@@ -817,10 +808,10 @@
 								<div class="col">
 									<!--begin::Overlay-->
 									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/media/demos/demo4.png">
+										href="assets/medi-a/stock/600x600/grabble.png">
 										<!--begin::Image-->
 										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
-											style="background-image:url('assets/media/demos/demo4.png')"></div>
+											style="background-image:url('assets/media/stock/600x600/InGrabber.png')"></div>
 										<!--end::Image-->
 										<!--begin::Action-->
 										<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
@@ -834,10 +825,10 @@
 								<div class="col">
 									<!--begin::Overlay-->
 									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/media/stock/600x600/img-13.jpg">
+										href="assets/media/stock/600x400/frog2.jpeg">
 										<!--begin::Image-->
 										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
-											style="background-image:url('assets/media/stock/600x600/img-13.jpg')"></div>
+											style="background-image:url('assets/media/stock/600x600/Run.jpeg')"></div>
 										<!--end::Image-->
 										<!--begin::Action-->
 										<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
