--- a/public/index.html
+++ b/public/index.html
@@ -808,10 +808,10 @@
 								<div class="col">
 									<!--begin::Overlay-->
 									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/medi-a/stock/600x600/grabble.png">
+										href="assets/media/stock/600x600/grabble2.png">
 										<!--begin::Image-->
 										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
-											style="background-image:url('assets/media/stock/600x600/InGrabber.png')"></div>
+											style="background-image:url('assets/media/stock/600x600/grabble.png')"></div>
 										<!--end::Image-->
 										<!--begin::Action-->
 										<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
@@ -842,10 +842,10 @@
 								<div class="col">
 									<!--begin::Overlay-->
 									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/media/stock/600x400/img-52.jpg">
+										href="assets/media/stock/600x600/rahe haq.webp">
 										<!--begin::Image-->
 										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
-											style="background-image:url('assets/media/stock/600x400/img-52.jpg')"></div>
+											style="background-image:url('assets/media/stock/600x600/religious.png')"></div>
 										<!--end::Image-->
 										<!--begin::Action-->
 										<div class="overlay-layer card-rounded bg-dark bg-opacity-25">
