--- a/public/landing.html
+++ b/public/landing.html
@@ -6,14 +6,14 @@
 <head>
 	<base href="">
 	<meta charset="utf-8" />
-	<title>Metronic Bootstrap 5 Theme | Keenthemes</title>
+	<title>Mkg Technology</title>
 	<meta name="description"
 		content="Metronic admin dashboard live demo. Check out all the features of the admin panel. A large number of settings, additional services and widgets." />
 	<meta name="keywords"
 		content="Metronic, bootstrap, bootstrap 5, Angular 11, VueJs, React, Laravel, admin themes, web design, figma, web development, ree admin themes, bootstrap admin, bootstrap dashboard" />
 	<link rel="canonical" href="Https://preview.keenthemes.com/metronic8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+	<link rel="shortcut icon" href="assets/media/logos/favicon.ico.png" />
 	<!--begin::Fonts-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
 	<!--end::Fonts-->
@@ -1417,24 +1417,23 @@
 					</div>
 				</section>
 				<!--begin::Highlight-->
-				<div
-					class="d-flex flex-stack flex-wrap flex-md-nowrap card-rounded shadow p-8 p-lg-12 mb-n5 mb-lg-n13 new_grad">
-					<!--begin::Content-->
-					<div class="my-2 me-5">
-						<!--begin::Title-->
-						<div class="fs-1 fs-lg-2qx fw-bolder text-white mb-2" style="text-align: center;">Start With MKG
+				<div class="d-flex flex-stack flex-wrap flex-md-nowrap card-rounded new_grad shadow grad1">
+					<div class="my-2 me-5" >
+						<div class="fs-1 fs-lg-2qx fw-bolder text-white mb-2  " style=" text-align: center;">
+							Start With MKG
 							Tech Today,
 							<span class="fw-normal">Build your dream with us!</span>
 						</div>
-						<!--end::Title-->
-						<!--begin::Description-->
-						<!--end::Description-->
 					</div>
-					<!--end::Content-->
-					<!--begin::Link-->
-					<!--end::Link-->
 				</div>
-				<!--end::Highlight-->
+				<div class="d-flex flex-stack flex-wrap flex-md-nowrap card-rounded shadow new_grad grad2">
+					<!-- <div class="my-2 me-5" > -->
+						<div class="fs-1 fs-lg-2qx text-white mb-2  " style="text-align: center;">
+							Start With MKG
+							Tech Today, Build your dream with us!
+						</div>
+					<!-- </div> -->
+				</div>
 			</div>
 			<!--end::Container-->
 		</div>
