--- a/public/landing.html
+++ b/public/landing.html
@@ -143,64 +143,20 @@
 					<!--begin::Heading-->
 					<div class="text-center mb-5 mb-lg-10 py-10 py-lg-20">
 						<!--begin::Title-->
-						<h1 class="text-white lh-base fw-bolder fs-2x fs-lg-3x mb-15">Build An Outstanding Solutions
+						<h1 class="text-white lh-base fw-bolder fs-2x fs-lg-3x mb-15">Making your ideas happen
 							<br />with
 							<span
 								style="background: linear-gradient(to right, #12CE5D 0%, #FFD80C 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;">
-								<span id="kt_landing_hero_text">The Best Theme Ever</span>
+								<span id="kt_landing_hero_text"> Mkg Tech</span>
 							</span>
 						</h1>
 						<!--end::Title-->
 						<!--begin::Action-->
-						<a href="index.html" class="btn btn-primary">Try Metronic</a>
+						<a href="index.html" class="btn btn-primary">Contact Us</a>
 						<!--end::Action-->
 					</div>
 					<!--end::Heading-->
-					<!--begin::Clients-->
-					<div class="d-flex flex-center flex-wrap position-relative px-5">
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip" title="Fujifilm">
-							<img src="assets/media/svg/brand-logos/fujifilm.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip" title="Vodafone">
-							<img src="assets/media/svg/brand-logos/vodafone.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip" title="KPMG International">
-							<img src="assets/media/svg/brand-logos/kpmg.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip" title="Nasa">
-							<img src="assets/media/svg/brand-logos/nasa.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip" title="Aspnetzero">
-							<img src="assets/media/svg/brand-logos/aspnetzero.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip"
-							title="AON - Empower Results">
-							<img src="assets/media/svg/brand-logos/aon.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip" title="Hewlett-Packard">
-							<img src="assets/media/svg/brand-logos/hp-3.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-						<!--begin::Client-->
-						<div class="d-flex flex-center m-3 m-md-6" data-bs-toggle="tooltip" title="Truman">
-							<img src="assets/media/svg/brand-logos/truman.svg" class="mh-30px mh-lg-40px" alt="" />
-						</div>
-						<!--end::Client-->
-					</div>
-					<!--end::Clients-->
+					
 				</div>
 				<!--end::Landing hero-->
 			</div>
@@ -843,7 +799,7 @@
 								<div class="col">
 									<!--begin::Overlay-->
 									<a class="d-block overlay" data-fslightbox="lightbox-hot-sales"
-										href="assets/media/stock/600x600/rahe haq.webp">
+										href="assets/media/stock/600x600/rah.jpg">
 										<!--begin::Image-->
 										<div class="overlay-wrapper bgi-no-repeat bgi-position-center bgi-size-cover card-rounded min-h-175px"
 											style="background-image:url('assets/media/stock/600x600/religious.png')"></div>
@@ -925,12 +881,12 @@
 							<div class="d-flex align-items-center">
 								<!--begin::Avatar-->
 								<div class="symbol symbol-circle symbol-50px me-5">
-									<img src="assets/media/avatars/religious.png" class="" alt="" />
+									<img src="assets/media/avatars/reahe.jpg" class="" alt="" />
 								</div>
 								<!--end::Avatar-->
 								<!--begin::Name-->
 								<div class="flex-grow-1">
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-6">Sikandar Ali</a>
+									<a  class="text-dark fw-bolder text-hover-primary fs-6" style="cursor: pointer;">Sikandar Ali</a>
 									<span class="text-muted d-block fw-bold">Rah E Haq</span>
 								</div>
 								<!--end::Name-->
@@ -987,7 +943,7 @@
 								<!--end::Avatar-->
 								<!--begin::Name-->
 								<div class="flex-grow-1">
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-6">Umair</a>
+									<a  class="text-dark fw-bolder text-hover-primary fs-6" style="cursor: pointer;">Umair</a>
 									<span class="text-muted d-block fw-bold">Aitbar and Saman</span>
 								</div>
 								<!--end::Name-->
@@ -1039,12 +995,12 @@
 							<div class="d-flex align-items-center">
 								<!--begin::Avatar-->
 								<div class="symbol symbol-circle symbol-50px me-5">
-									<img src="assets/media/avatars/InGrabber.jpeg" class="" alt="" />
+									<img src="assets/media/avatars/grabble.png" class="" alt="" />
 								</div>
 								<!--end::Avatar-->
 								<!--begin::Name-->
 								<div class="flex-grow-1">
-									<a href="#" class="text-dark fw-bolder text-hover-primary fs-6">Feroz Khan</a>
+									<a  class="text-dark fw-bolder text-hover-primary fs-6" style="cursor: pointer;">Feroz Khan</a>
 									<span class="text-muted d-block fw-bold">InGrabber</span>
 								</div>
 								<!--end::Name-->
@@ -1127,6 +1083,8 @@
 							Start With MKG
 							Tech Today,
 							<span class="fw-normal">Build your dream with us!</span>
+						<a href="index.html" class="btn btn-primary" style="margin-left: 30px;">Contact Us</a>
+
 						</div>
 					</div>
 				</div>
